--- a/source/stylesheets/mixins.scss
+++ b/source/stylesheets/mixins.scss
@@ -13,7 +13,7 @@ body {
 }
 
 hr {
-    border-color: @theme-primary;
+    border-color: $theme-primary;
     border-width: 3px;
     max-width: 50px;
 }
@@ -24,10 +24,10 @@ hr.light {
 
 a {
     .transition-all;
-    color: @theme-primary;
+    color: $theme-primary;
     &:hover,
     &:focus {
-        color: darken(@theme-primary, 10%);
+        color: darken($theme-primary, 10%);
     }
 }
 
@@ -47,11 +47,11 @@ p {
 }
 
 .bg-primary {
-    background-color: @theme-primary;
+    background-color: $theme-primary;
 }
 
 .bg-dark {
-    background-color: @theme-dark;
+    background-color: $theme-dark;
     color: white;
 }
 
@@ -75,17 +75,17 @@ aside {
 
 .navbar-default {
     background-color: white;
-    border-color: fade(@theme-dark, 5%);
+    border-color: fade($theme-dark, 5%);
     .sans-serif-font;
     .transition-all;
     .navbar-header .navbar-brand {
-        color: @theme-primary;
+        color: $theme-primary;
         .sans-serif-font;
         font-weight: 700;
         text-transform: uppercase;
         &:hover,
         &:focus {
-            color: darken(@theme-primary, 10%);
+            color: darken($theme-primary, 10%);
         }
     }
     .nav {
@@ -95,15 +95,15 @@ aside {
                 text-transform: uppercase;
                 font-weight: 700;
                 font-size: 13px;
-                color: @theme-dark;
+                color: $theme-dark;
                 &:hover {
-                    color: @theme-primary;
+                    color: $theme-primary;
                 }
             }
             &.active {
                 > a,
                 > a:focus {
-                    color: @theme-primary !important;
+                    color: $theme-primary !important;
                     background-color: transparent;
                     &:hover {
                         background-color: transparent;
@@ -131,20 +131,20 @@ aside {
         }
         &.affix {
             background-color: white;
-            border-color: fade(@theme-dark, 5%);
+            border-color: fade($theme-dark, 5%);
             .navbar-header .navbar-brand {
-                color: @theme-primary;
+                color: $theme-primary;
                 font-size: 14px;
                 &:hover,
                 &:focus {
-                    color: darken(@theme-primary, 10%);
+                    color: darken($theme-primary, 10%);
                 }
             }
             .nav > li > a,
             .nav > li > a:focus {
-                color: @theme-dark;
+                color: $theme-dark;
                 &:hover {
-                    color: @theme-primary;
+                    color: $theme-primary;
                 }
             }
         }
@@ -235,7 +235,7 @@ header {
         color: white;
         opacity: 0;
         display: block;
-        background: fade(@theme-primary, 90%);
+        background: fade($theme-primary, 90%);
         position: absolute;
         bottom: 0;
         text-align: center;
@@ -290,7 +290,7 @@ header {
 
 // Bootstrap Overrides
 .text-primary {
-    color: @theme-primary;
+    color: $theme-primary;
 }
 
 .no-gutter > [class*='col-'] {
@@ -300,11 +300,11 @@ header {
 
 // Button Styles
 .btn-default {
-    .button-variant(@theme-dark;white;white);
+    $include button-variant($theme-dark;white;white);
 }
 
 .btn-primary {
-    .button-variant(white;@theme-primary;@theme-primary);
+    $include button-variant(white;$theme-primary;$theme-primary);
 }
 
 .btn {
@@ -324,13 +324,13 @@ header {
 ::-moz-selection {
     color: white;
     text-shadow: none;
-    background: @theme-dark;
+    background: $theme-dark;
 }
 
 ::selection {
     color: white;
     text-shadow: none;
-    background: @theme-dark;
+    background: $theme-dark;
 }
 
 img::selection {
@@ -344,5 +344,5 @@ img::-moz-selection {
 }
 
 body {
-    webkit-tap-highlight-color: @theme-dark;
+    webkit-tap-highlight-color: $theme-dark;
 }
