--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -50,10 +50,10 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2 text-center">
-          <h2 class="section-heading">We've got what you need!</h2>
+          <h2 class="section-heading">Technologies we love</h2>
           <hr class="light">
-          <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
-          <a href="#" class="btn btn-default btn-xl">Get Started!</a>
+          <p class="text-faded"></p>
+          <a href="#contact" class="btn btn-default btn-xl">Get in touch!</a>
         </div>
       </div>
     </div>
@@ -106,15 +106,15 @@
     <div class="container-fluid">
       <div class="row no-gutter">
         <div class="col-lg-4 col-sm-6">
-          <a href="#" class="portfolio-box">
-            <%= image_tag "portfolio/1.jpg", :class => "img-responsive",  :alt=> "" %>
+          <a href="https://crowdfireapp.com" class="portfolio-box">
+            <%= image_tag "portfolio/crowdfire-logo.png", :class => "img-responsive",  :alt=> "" %>
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-faded">
-                  Category
+									DevOps
                 </div>
                 <div class="project-name">
-                  Project Name
+                  Continuous Delivery with automated deployment
                 </div>
               </div>
             </div>
@@ -200,30 +200,17 @@
     </div>
   </section>
 
-  <aside class="bg-dark">
-    <div class="container text-center">
-      <div class="call-to-action">
-        <h2>Free Download at Start Bootstrap!</h2>
-        <a href="#" class="btn btn-default btn-xl wow tada">Download Now!</a>
-      </div>
-    </div>
-  </aside>
-
   <section id="contact">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2 text-center">
           <h2 class="section-heading">Let's Get In Touch!</h2>
           <hr class="primary">
-          <p>Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
+          <p>Send us an email and we will get back to in 24 hours.</p>
         </div>
-        <div class="col-lg-4 col-lg-offset-2 text-center">
-          <i class="fa fa-phone fa-3x wow bounceIn"></i>
-          <p>123-456-6789</p>
-        </div>
-        <div class="col-lg-4 text-center">
+        <div class="col-lg-4 col-lg-offset-4 text-center">
           <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-          <p><a href="mailto:your-email@your-domain.com">feedback@startbootstrap.com</a></p>
+          <p><a href="mailto:mohit@decomplect.io">mohit@decomplect.io</a></p>
         </div>
       </div>
     </div>
