Add clients and conferences

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -46,151 +46,150 @@
     </div>
   </header>
 
-  <section class="bg-primary" id="about">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-lg-offset-2 text-center">
-          <h2 class="section-heading">Technologies we love</h2>
-          <hr class="light">
-          <p class="text-faded"></p>
-          <a href="#contact" class="btn btn-default btn-xl">Get in touch!</a>
-        </div>
-      </div>
-    </div>
-  </section>
 
   <section id="services">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading">At Your Service</h2>
+          <h2 class="section-heading">What We Do</h2>
           <hr class="primary">
         </div>
       </div>
     </div>
     <div class="container">
       <div class="row">
-        <div class="col-lg-3 col-md-6 text-center">
+        <div class="col-lg-6 col-md-6 col-lg-offset-3 col-md-offset-3 text-center">
           <div class="service-box">
             <i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i>
-            <h3>Sturdy Templates</h3>
-            <p class="text-muted">Our templates are updated regularly so they don't break.</p>
+            <h3>Software Delivery</h3>
+            <p class="text-muted">We ship thoroughly tested, carefully crafted software.</p>
           </div>
         </div>
-        <div class="col-lg-3 col-md-6 text-center">
+			</div>
+      <div class="row">
+        <div class="col-lg-6 col-md-6 col-lg-offset-3 col-md-offset-3 text-center">
           <div class="service-box">
-            <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i>
-            <h3>Ready to Ship</h3>
-            <p class="text-muted">You can use this theme as is, or you can make changes!</p>
+            <i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i>
+            <h3>Consulting</h3>
+            <p class="text-muted">We work with your team and help you adopt functional programming and the DevOps philosophy.</p>
           </div>
         </div>
-        <div class="col-lg-3 col-md-6 text-center">
+			</div>
+			<div class="row"">
+        <div class="col-lg-6 col-md-6 col-lg-offset-3 col-md-offset-3 text-center">
           <div class="service-box">
             <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
-            <h3>Up to Date</h3>
-            <p class="text-muted">We update dependencies to keep things fresh.</p>
+            <h3>Community</h3>
+						<p class="text-muted">We are the creators of
+							<a href="http://devtoprod.com">Dev To Prod</a> - a series of videos on DevOps and Continuous Delivery.
+						</p>
+						<p class="text-muted">We also speak regularly at <a href="#conferences">conferences</a> around the world</p>
           </div>
         </div>
-        <div class="col-lg-3 col-md-6 text-center">
+			</div>
+			<div class="row">
+        <div class="col-lg-6 col-md-6 col-lg-offset-3 col-md-offset-3 text-center">
           <div class="service-box">
             <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
-            <h3>Made with Love</h3>
-            <p class="text-muted">You have to make your websites with love these days!</p>
+            <h3>Open Source</h3>
+            <p class="text-muted">We love giving back to the community. Check out our <a href="http://github.com/decomplect-io">Github repo</a> for our work.</p>
           </div>
         </div>
+			</div>
+    </div>
+	</section>
+
+	<section id="conferences">
+		<div class="container">
+    <div class="row">
+      <div class="col-lg-12 text-center">
+        <h2 class="section-heading">Conferences we have spoken at</h2>
+        <hr class="primary">
+      </div>
+			<div class="row">
+				<div class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3">
+					<h3>EuroClojure 2015, Barcelona</h3>
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe width="360" height="200" src="https://www.youtube.com/embed/7BFF50BHPPo" frameborder="0" allowfullscreen></iframe>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3">
+					<h3>Rootconf 2015, Bangalore</h3>
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe width="480" height="270" src="https://www.youtube.com/embed/PtvuPQFYS98" frameborder="0" allowfullscreen></iframe>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3">
+					<h3>Functional Conf 2014, Bangalore</h3>
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe width="420" height="315" src="https://www.youtube.com/embed/GquWlSolgf0" frameborder="0" allowfullscreen></iframe>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3">
+					<h3>RubyConf 2013, Pune</h3>
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe width="560" height="315" src="https://www.youtube.com/embed/w0UW4NJbNRs" frameborder="0" allowfullscreen></iframe>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+  <section id="portfolio">
+    <div class="row">
+      <div class="col-lg-12 text-center">
+        <h2 class="section-heading">Clients that trust us</h2>
+        <hr class="primary">
       </div>
     </div>
-  </section>
-
-  <section class="no-padding" id="portfolio">
     <div class="container-fluid">
       <div class="row no-gutter">
-        <div class="col-lg-4 col-sm-6">
+        <div class="col-lg-4 col-md-4 col-sm-4">
           <a href="https://crowdfireapp.com" class="portfolio-box">
-            <%= image_tag "portfolio/crowdfire-logo.png", :class => "img-responsive",  :alt=> "" %>
+            <%= image_tag "portfolio/crowdfire-logo.png", class: "img-responsive",  alt: "Crowdfire Logo" %>
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-faded">
 									DevOps
                 </div>
                 <div class="project-name">
-                  Continuous Delivery with automated deployment
+                  We helped Crowdfire set up their Continuous Delivery pipelines
                 </div>
               </div>
             </div>
           </a>
         </div>
-        <div class="col-lg-4 col-sm-6">
-          <a href="#" class="portfolio-box">
-						<%= image_tag "portfolio/2.jpg", :class => "img-responsive",  :alt=> "" %>
-
+        <div class="col-lg-4 col-md-4 col-sm-4">
+          <a href="https://getsimpl.com" class="portfolio-box">
+            <%= image_tag "portfolio/simpl-logo.png", class: "img-responsive",  alt: "Simpl Logo" %>
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-faded">
-                  Category
+									Consulting
                 </div>
                 <div class="project-name">
-                  Project Name
+									We worked with getsimpl.com to enable them to go to market quickly and iteratively
                 </div>
               </div>
             </div>
           </a>
         </div>
-        <div class="col-lg-4 col-sm-6">
-          <a href="#" class="portfolio-box">
-						<%= image_tag "portfolio/3.jpg", :class => "img-responsive",  :alt=> "" %>
+        <div class="col-lg-4 col-md-4 col-sm-4">
+          <a href="http://iconanalytical.com" class="portfolio-box">
+						<%= image_tag "portfolio/icon-analytical.png", class: "img-responsive", alt: "Icon analytical image" %>
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-faded">
-                  Category
+                  Delivery
                 </div>
                 <div class="project-name">
-                  Project Name
-                </div>
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-lg-4 col-sm-6">
-          <a href="#" class="portfolio-box">
-						<%= image_tag "portfolio/4.jpg", :class => "img-responsive",  :alt=> "" %>
-            <div class="portfolio-box-caption">
-              <div class="portfolio-box-caption-content">
-                <div class="project-category text-faded">
-                  Category
-                </div>
-                <div class="project-name">
-                  Project Name
-                </div>
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-lg-4 col-sm-6">
-          <a href="#" class="portfolio-box">
-						<%= image_tag "portfolio/5.jpg", :class => "img-responsive",  :alt=> "" %>
-            <div class="portfolio-box-caption">
-              <div class="portfolio-box-caption-content">
-                <div class="project-category text-faded">
-                  Category
-                </div>
-                <div class="project-name">
-                  Project Name
-                </div>
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-lg-4 col-sm-6">
-          <a href="#" class="portfolio-box">
-						<%= image_tag "portfolio/6.jpg", :class => "img-responsive",  :alt=> "" %>
-            <div class="portfolio-box-caption">
-              <div class="portfolio-box-caption-content">
-                <div class="project-category text-faded">
-                  Category
-                </div>
-                <div class="project-name">
-                  Project Name
+                  We delivered a custom CRM solution for Icon Analytical to make their sales organization more effective.
                 </div>
               </div>
             </div>
