Use basic css, no less

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -16,9 +16,6 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
           <li>
-            <a class="page-scroll" href="#about">About</a>
-          </li>
-          <li>
             <a class="page-scroll" href="#services">Services</a>
           </li>
           <li>
@@ -41,7 +38,7 @@
         <hr>
         <p>At decomplect, we believe in crafting simple solutions for hard problems.</p>
 				<p>We use functional programming and the DevOps philosophy to craft beautiful, usable software.</p>
-        <a href="#about" class="btn btn-primary btn-xl page-scroll">Read More</a>
+        <a href="#services" class="btn btn-primary btn-xl page-scroll">Read More</a>
       </div>
     </div>
   </header>
