--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,228 +1,13 @@
-<body id="page-top">
-  <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
-    <div class="container-fluid">
-      <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand page-scroll" href="#page-top">decomplect</a>
-      </div>
+---
+title: Welcome to Middleman
+---
 
-      <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav navbar-right">
-          <li>
-            <a class="page-scroll" href="#services">Services</a>
-          </li>
-          <li>
-            <a class="page-scroll" href="#portfolio">Portfolio</a>
-          </li>
-          <li>
-            <a class="page-scroll" href="#contact">Contact</a>
-          </li>
-        </ul>
-      </div>
-      <!-- /.navbar-collapse -->
-    </div>
-    <!-- /.container-fluid -->
-  </nav>
-
-  <header>
-    <div class="header-content">
-      <div class="header-content-inner">
-        <h1>Software Made Simple</h1>
-        <hr>
-        <p>At decomplect, we believe in crafting simple solutions for hard problems.</p>
-				<p>We use functional programming and the DevOps philosophy to craft beautiful, usable software.</p>
-        <a href="#services" class="btn btn-primary btn-xl page-scroll">Read More</a>
-      </div>
-    </div>
-  </header>
-
-
-  <section id="services">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12 text-center">
-          <h2 class="section-heading">What We Do</h2>
-          <hr class="primary">
-        </div>
-      </div>
-    </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-6 col-md-6 col-lg-offset-3 col-md-offset-3 text-center">
-          <div class="service-box">
-            <i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i>
-            <h3>Software Delivery</h3>
-            <p class="text-muted">We ship thoroughly tested, carefully crafted software.</p>
-          </div>
-        </div>
-			</div>
-      <div class="row">
-        <div class="col-lg-6 col-md-6 col-lg-offset-3 col-md-offset-3 text-center">
-          <div class="service-box">
-            <i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i>
-            <h3>Consulting</h3>
-            <p class="text-muted">We work with your team and help you adopt functional programming and the DevOps philosophy.</p>
-          </div>
-        </div>
-			</div>
-			<div class="row"">
-        <div class="col-lg-6 col-md-6 col-lg-offset-3 col-md-offset-3 text-center">
-          <div class="service-box">
-            <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
-            <h3>Community</h3>
-						<p class="text-muted">We are the creators of
-							<a href="http://devtoprod.com">Dev To Prod</a> - a series of videos on DevOps and Continuous Delivery.
-						</p>
-						<p class="text-muted">We also speak regularly at <a href="#conferences">conferences</a> around the world</p>
-          </div>
-        </div>
-			</div>
-			<div class="row">
-        <div class="col-lg-6 col-md-6 col-lg-offset-3 col-md-offset-3 text-center">
-          <div class="service-box">
-            <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
-            <h3>Open Source</h3>
-            <p class="text-muted">We love giving back to the community. Check out our <a href="http://github.com/decomplect-io">Github repo</a> for our work.</p>
-          </div>
-        </div>
-			</div>
-    </div>
-	</section>
-
-	<section id="conferences">
-		<div class="container">
-    <div class="row">
-      <div class="col-lg-12 text-center">
-        <h2 class="section-heading">Conferences we have spoken at</h2>
-        <hr class="primary">
-      </div>
-			<div class="row">
-				<div class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3">
-					<h3>EuroClojure 2015, Barcelona</h3>
-					<div class="embed-responsive embed-responsive-16by9">
-						<iframe width="360" height="200" src="https://www.youtube.com/embed/7BFF50BHPPo" frameborder="0" allowfullscreen></iframe>
-					</div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3">
-					<h3>Rootconf 2015, Bangalore</h3>
-					<div class="embed-responsive embed-responsive-16by9">
-						<iframe width="480" height="270" src="https://www.youtube.com/embed/PtvuPQFYS98" frameborder="0" allowfullscreen></iframe>
-					</div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3">
-					<h3>Functional Conf 2014, Bangalore</h3>
-					<div class="embed-responsive embed-responsive-16by9">
-						<iframe width="420" height="315" src="https://www.youtube.com/embed/GquWlSolgf0" frameborder="0" allowfullscreen></iframe>
-					</div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3">
-					<h3>RubyConf 2013, Pune</h3>
-					<div class="embed-responsive embed-responsive-16by9">
-						<iframe width="560" height="315" src="https://www.youtube.com/embed/w0UW4NJbNRs" frameborder="0" allowfullscreen></iframe>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-
-  <section id="portfolio">
-    <div class="row">
-      <div class="col-lg-12 text-center">
-        <h2 class="section-heading">Clients that trust us</h2>
-        <hr class="primary">
-      </div>
-    </div>
-    <div class="container-fluid">
-      <div class="row no-gutter">
-        <div class="col-lg-4 col-md-4 col-sm-4">
-          <a href="https://crowdfireapp.com" class="portfolio-box">
-            <%= image_tag "portfolio/crowdfire-logo.png", class: "img-responsive",  alt: "Crowdfire Logo" %>
-            <div class="portfolio-box-caption">
-              <div class="portfolio-box-caption-content">
-                <div class="project-category text-faded">
-									DevOps
-                </div>
-                <div class="project-name">
-                  We helped Crowdfire set up their Continuous Delivery pipelines
-                </div>
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-lg-4 col-md-4 col-sm-4">
-          <a href="https://getsimpl.com" class="portfolio-box">
-            <%= image_tag "portfolio/simpl-logo.png", class: "img-responsive",  alt: "Simpl Logo" %>
-            <div class="portfolio-box-caption">
-              <div class="portfolio-box-caption-content">
-                <div class="project-category text-faded">
-									Consulting
-                </div>
-                <div class="project-name">
-									We worked with getsimpl.com to enable them to go to market quickly and iteratively
-                </div>
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-lg-4 col-md-4 col-sm-4">
-          <a href="http://iconanalytical.com" class="portfolio-box">
-						<%= image_tag "portfolio/icon-analytical.png", class: "img-responsive", alt: "Icon analytical image" %>
-            <div class="portfolio-box-caption">
-              <div class="portfolio-box-caption-content">
-                <div class="project-category text-faded">
-                  Delivery
-                </div>
-                <div class="project-name">
-                  We delivered a custom CRM solution for Icon Analytical to make their sales organization more effective.
-                </div>
-              </div>
-            </div>
-          </a>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section id="contact">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-lg-offset-2 text-center">
-          <h2 class="section-heading">Let's Get In Touch!</h2>
-          <hr class="primary">
-          <p>Send us an email and we will get back to in 24 hours.</p>
-        </div>
-        <div class="col-lg-4 col-lg-offset-4 text-center">
-          <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-          <p><a href="mailto:mohit@decomplect.io">mohit@decomplect.io</a></p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- jQuery -->
-  <script src="javascripts/jquery.js"></script>
-
-  <!-- Bootstrap Core JavaScript -->
-  <script src="javascripts/bootstrap.min.js"></script>
-
-  <!-- Plugin JavaScript -->
-  <script src="javascripts/jquery.easing.min.js"></script>
-  <script src="javascripts/jquery.fittext.js"></script>
-  <script src="javascripts/wow.min.js"></script>
-
-  <!-- Custom Theme JavaScript -->
-  <script src="javascripts/creative.js"></script>
-</body>
+<div class="welcome">
+  <div class="logo">
+    <%= image_tag "middleman-logo.svg" %>
+  </div>
+  <h1>Middleman is Running</h1>
+  <p class="doc">
+    <%= link_to "Read Documentation Online", "https://middlemanapp.com", target: "_blank" %>
+  </p><!-- .doc -->
+</div><!-- .welcome -->
