--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,13 +1,195 @@
 ---
-title: Welcome to Middleman
+title: decomplect
+layout: layout
+talks:
+- conference: "EuroClojure 2015"
+  location: "Barcelona"
+  title: "What Lies Beneath"
+  url: "https://www.youtube.com/embed/7BFF50BHPPo"
+- conference: "RootConf 2015"
+  location: "Bangalore"
+  title: "What DevOps can learn from sports teams."
+  url: "https://www.youtube.com/embed/PtvuPQFYS98"
+- conference: "Functional Conf 2014"
+  location: "Bangalore"
+  title: "Purely functional data structures demystified"
+  url: "https://www.youtube.com/embed/GquWlSolgf0"
+- conference: "RubyConf India 2013"
+  location: "Pune"
+  title: "Ruby loves Unix"
+  url: "https://www.youtube.com/embed/w0UW4NJbNRs"
 ---
-
-<div class="welcome">
-  <div class="logo">
-    <%= image_tag "middleman-logo.svg" %>
+<main class="landing">
+  <div class="row">
+    <div class="column">
+      <section class="hero">
+        <h1 class="title">
+          decomplect
+        </h1>
+        <div class="byline">
+          <h2>
+            We help you <strong><%= link_to 'grow', '#grow' %></strong> your business,
+          </h2>
+          <h2>
+            through software that <strong><%= link_to 'ages well', '#wine' %></strong>.
+          </h2>
+        </div>
+      </section>
+    </div>
   </div>
-  <h1>Middleman is Running</h1>
-  <p class="doc">
-    <%= link_to "Read Documentation Online", "https://middlemanapp.com", target: "_blank" %>
-  </p><!-- .doc -->
-</div><!-- .welcome -->
+  <section class="row about-us">
+    <section class="column">
+      <h2>Who are we?</h2>
+      <p>
+        decomplect is a software consultancy based out of Pune, India.
+      </p>
+      <p>
+        We work closely with <%= link_to 'our customers', '#customers' %> to deliver software
+        using the principles of <%= link_to 'continuous delivery.', '#continuous-delivery' %>
+      </p>
+      <p>
+        We <%= link_to 'speak', '#talks' %> at tech conferences around the world.
+      </p>
+      <p>
+        We are the creators of <a href="devtoprod.com">Dev To Prod</a>, a series of videos
+        on topics from DevOps and continuous delivery.
+      </p>
+      <p>
+        We love to give back to the community.
+        We taught a workshop on infrastructure automation at Garden City Ruby Conf 2016 in Bangalore.
+        We are also workshop sponsors at Deccan Ruby Conf 2016 in Pune.</p>
+      <p>
+        We contribute to <%= link_to 'open source', 'http://github.com/decomplect-io' %>.
+      </p>
+      <p>
+        We are building a <strong>tribe</strong> of passionate programmers.
+        Would you like to <%= link_to 'work with us?', '#work-with-us' %>
+      </p>
+    </section>
+  </section>
+  <section class="row talks-header">
+    <section class="column">
+      <h2>Our talks</h2>
+    </section>
+  </section>
+  <section class="row talks" id="talks">
+    <% current_page.data.talks.each do |talk| %>
+        <section class="column">
+          <h4><%= talk.conference %></h4>
+          <iframe width="100%" src=<%= "\"#{talk.url}\"" %>  frameborder="0" allowfullscreen></iframe>
+        </section>
+    <% end %>
+  </section>
+  <section class="row" id="grow">
+    <section class="column on-growth">
+      <h2>On growth</h2>
+      <p>
+        Most business want to grow! Growth is hard, because it comes with growing pains.
+        You might be having a hard time scaling your team, or maybe your infrastructure can't cope with customer demand?
+        These are good problems to have, it means you are building something that people want. We are here to help.
+        We work with <%= link_to 'customers', '#customers' %> to deliver software that destroys bottlenecks and enables
+        growth.
+      </p>
+    </section>
+  </section>
+  <section class="row" id="wine">
+    <section class="column wine">
+      <h2>On aging well</h2>
+      <p>
+        It is estimated that 80% of the time, effort and money spent on IT is spent on maintaining legacy systems.
+        Legacy systems are characterized by being hard to change. One of our missions is to write software
+        that lives forever - ever changing, ever evolving. We are passionate about keeping software 'soft'.
+      </p>
+      <p>
+        This is easier said than done. It requires being careful and deliberate about modeling your domain.
+        It requires teasing out concepts that are independent and then composing them together to create valuable
+        software.
+        We believe in hammock-driven development, we like to take some time up front to figure out the 'why', before
+        jumping into the 'how'. We like to use the right <%= link_to 'tools', '#tools' %> for the job.
+      </p>
+    </section>
+  </section>
+  <section class="customers" id="customers">
+    <h2>Who should hire us?</h2>
+    <p>
+      You are a startup, who has found or wants to find product-market fit.
+      You understand that software is your competitive advantage, and you believe in
+      investing in good quality software. We can help by delivering modular software
+      with a continuous delivery pipeline. Read about how we helped getsimpl.com iterate
+      and find product-market fit...
+    </p>
+    <p>
+      You are an established enterprise, and you've identified bottlenecks to growth.
+      You believe that 'software is eating the world' and you want to invest in tools
+      that will give you the edge over your competition. You realize that most software
+      does not age well, it becomes increasingly painful and costly to maintain. We can
+      help by being laser focused on modularity and maintainability as we deliver tools
+      to power your business. Read about how we are working with a Fortune 500 (details under NDA)
+      enterprise to help them move to a micro-service architecture...
+    </p>
+    <p>
+      You are a small business that has a fairly specialized workforce and problem domain.
+      The off-the-shelf tools don't cut it for you, because they don't speak your language. You want
+      the tool to be designed for your people, rather than forcing your people to learn something
+      that doesn't really fit. Read about how we worked with Icon Analytical Systems to build
+      a custom CRM system for their sales force.
+    </p>
+  </section>
+  <section class="scale-your-business" id="scale">
+    <h2>Customer Stories</h2>
+    <h3>Product-market fit for a startup</h3>
+    <p>
+      We worked with getsimpl.com to find product-market fit.
+      This included setting up the engineering organization to enable continuous delivery.
+      Specifically, we helped setup code review processes (Github PR's), continuous integration (Circle CI),
+      release automation (Github Releases) and cloud infrastructure (AWS).
+      We also helped the team make tech choices and architect their backend for scale.
+    </p>
+    <hr>
+    <h3>Micro-services at a large enterprise organization</h3>
+    <p>
+      We are working with a large enterprise to help them with their transition from monolithic services
+      to independent micro-services. This includes setting up a continuous delivery pipeline
+      for each service by making it independently testable and releasable. The micro-services are based
+      on OpenShift.
+    </p>
+    <h3>Custom CRM for a small business</h3>
+    <p>
+      We worked with Icon Analytical to create a custom CRM tailored to their needs. We continue to
+      incorporate their feedback into the system, thereby creating a living, breathing software that
+      is flexible and continues to change. We used React.js for the frontend and Ruby on Rails for the backend.
+    </p>
+  </section>
+  <section class="how-we-work" id="continuous-delivery">
+    <h2>How We Work</h2>
+  </section>
+  <section class="continuous-delivery">
+    <h2>We practice <strong>continuous delivery</strong></h2>
+    <p>
+      We ensure that changes to your software can be made reliably, repeatably and quickly
+      by using tools and techniques from the world of DevOps.
+    </p>
+  </section>
+  <section class="we-are-lean">
+    <h2>We are <strong>lean</strong></h2>
+    <p>
+      Building the right thing is the single most important challenge for business
+      stakeholders. We help you adopt the scientific method of trying small experiments to figure out
+      what works. We focus on building software iteratively with a strong feedback loop from customers.
+    </p>
+    <p>
+      The story of how the Wright Brothers built the first airplane, is testament
+      to the fact that structuring your venture as a series of small, cheap experiments
+      allows you to learn a lot about your domain, and enables you to design solutions with real, practical
+      impact.
+    </p>
+    <p>Quoted from
+      the <%= link_to 'Smithsonian National Air and Space Museum', 'http://airandspace.si.edu/exhibitions/wright-brothers/online/fly/' %></p>
+    <blockquote>
+      The genius of Wilbur and Orville lay not only in the singular act of getting a flying machine into the air,
+      but also in the approach they evolved and employed to create the technology of flight. Their method of
+      evaluating data gathered by testing an aircraft in flight, then refining the design based on those results,
+      remains an essential tool in aerospace research and development.
+    </blockquote>
+  </section>
+</main>
