--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -202,7 +202,7 @@
         <div class="col-lg-8 col-lg-offset-2 text-center">
           <h2 class="section-heading">Let's Get In Touch!</h2>
           <hr class="primary">
-          <p>Send us an email and we will get back to in 24 hours.</p>
+          <p>Send us an email and we will reply in 24 hours.</p>
         </div>
         <div class="col-lg-4 col-lg-offset-4 text-center">
           <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
