Flesh out work with us.

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -192,4 +192,11 @@ talks:
       remains an essential tool in aerospace research and development.
     </blockquote>
   </section>
+  <section class="work-with-us" id="work-with-us">
+    <h2>Work with us?</h2>
+    <p>We want to build a collective of creators - programmers, designers, business people - if you want to make things, you'll like it here!</p>
+    <p>Please send an email with a brief introduction and answers to a few of the questions below, to mohit@decomplect.io</p>
+    <p>Please tell us - What excites you? What makes you angry? What have you created? What have you learnt? What do you want to learn?</p>
+    <p>Also tell us what your ideal workplace looks like - what do you expect from us?</p>
+  </section>
 </main>
